--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -378,7 +378,7 @@ input[type="date"]:hover {
   position: relative;
 }
 .detail-keyword-area .detail-input .add-btn {
-  display: inline-block;
+  display: block;
   position: absolute;
   top: 50%;
   right: 5px;
@@ -561,7 +561,7 @@ address > .copyright {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 972px;
-  height: 75vh;
+  /* height: 75vh; */
   padding: 20px 20px 24px;
   background-color: #fff;
   border-radius: 18px;
@@ -587,21 +587,22 @@ address > .copyright {
   line-height: 35px;
   vertical-align: top;
 }
-.sort-option {
+
+/* .sort-option {
   position: relative;
   display: inline-block;
-  /* padding-left: 16px; */
-  /* padding-right: 20px; */
+  width: 85px;
+  height: 35px;
   margin-left: 14px;
   border-radius: 8px;
   background-color: #fff;
   text-align: right;
-  overflow: hidden;
 }
 .sort-option:hover {
   box-shadow: 1px 3px 12px rgba(128, 128, 128, 0.2);
 }
 .sort-option.open {
+  height: auto;
   box-shadow: 1px 3px 12px rgba(128, 128, 128, 0.2);
 }
 .sort-option::after {
@@ -632,15 +633,20 @@ address > .copyright {
   color: #24cd88;
 }
 .sort-option .option-list {
+  position: absolute;
+  top: 34px;
+  left: 0;
+  width: 85px;
   height: 0;
+  border-radius: 8px;
   overflow: hidden;
+  z-index: 50;
 }
 .sort-option.open .option-list {
   height: auto;
-  /* overflow: auto; */
+  box-shadow: 1px 3px 12px rgba(128, 128, 128, 0.2);
 }
 .option-list > .option-item {
-  padding-left: 26px;
   padding-right: 12px;
   cursor: pointer;
 }
@@ -655,14 +661,69 @@ address > .copyright {
 }
 .option-list > .option-item:nth-child(even):hover {
   background-color: #fafafa;
+} */
+
+.sort-select-box {
+  position: relative;
+  width: 85px;
+  height: 35px;
+  margin-left: 14px;
+  border-radius: 8px;
+  /* border: 1px solid #f5f5f5; */
+  border: none;
+}
+.sort-select-box .sort-select {
+  position: relative;
+  width: inherit;
+  height: inherit;
+  padding: 0 0 0 8px;
+  border-radius: 8px;
+  background: transparent;
+  border: none;
+  outline: none;
+  z-index: 3;
+}
+.sort-select-box .sort-select option {
+  background-color: #f7f8f8;
+  color: #888;
+  padding: 3px 0;
+  font-size: 14px;
+}
+.sort-select-box .icon-arrow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: inherit;
+  z-index: 1;
+}
+.sort-select-box .icon-arrow::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 15px;
+  left: 14px;
+  transform: translate(-50%, -50%) rotate(45deg);
+  width: 5px;
+  height: 5px;
+  border-right: 1px solid #313131;
+  border-bottom: 1px solid #313131;
+}
+.sort-select-box .sort-select:focus {
+  box-shadow: 1px 3px 12px rgba(128, 128, 128, 0.2);
+}
+.sort-select-box .sort-select:focus + .icon-arrow::after {
+  /* top: 19px; */
+  /* transform: translate(-50%, -50%) rotate(-135deg); */
 }
 
 .show-all-top-inner .search-input {
   float: right;
-  /* display: inline-block; */
   width: 290px;
   height: 100%;
-  /* vertical-align: top; */
 }
 .show-all-top-inner .search-input > input {
   width: 100%;
@@ -762,7 +823,8 @@ address > .copyright {
 }
 .show-all-content .content-list {
   width: 100%;
-  height: 610px;
+  /* height: 610px; */
+  height: 63vh;
   padding: 14px 15px 10px 10px;
   overflow-y: scroll;
 }
@@ -1248,7 +1310,17 @@ address > .copyright {
   .show-all-inner > .show-all-top {
     height: auto;
   }
-  .show-all-top .show-all-top-left {
+  /* .sort-option:hover {
+    box-shadow: none;
+  }
+  .sort-option:hover .option-selected {
+    color: #313131;
+  }
+  .sort-option:hover::after {
+    border-right: 1px solid #888;
+    border-bottom: 1px solid #888;
+  } */
+  /* .show-all-top .show-all-top-left {
     height: auto;
   }
   .show-all-top-left .show-all-title {
@@ -1263,7 +1335,7 @@ address > .copyright {
   }
   .show-all-top-right .search-input {
     width: 100%;
-  }
+  } */
   .show-all-top #clsAllList {
     position: absolute;
     top: 16px;
