--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -968,9 +968,15 @@ address > .copyright {
   margin-bottom: 14px;
 }
 .show-origin-content > .origin-content-title > h3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
   margin-bottom: 8px;
   font-size: 18px;
   font-weight: 800;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 .origin-link-wrap .origin-link {
   display: inline-block;
@@ -1409,8 +1415,19 @@ address > .copyright {
   .show-origin-inner > .show-origin-top {
     margin-bottom: 10px;
   }
+  .show-origin-top .origin-top-right {
+    font-size: 12px;
+  }
+  .show-origin-top .origin-top-right > .origin-id {
+    display: inline-block;
+    margin-right: 6px;
+  }
   .show-origin-content > .origin-content-title > h3 {
     margin-bottom: 10px;
+  }
+
+  .show-origin-content > .origin-content-subs {
+    max-height: 40vh;
   }
 
   .show-origin-bottom > .origin-info-list {
