--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1416,7 +1416,9 @@ address > .copyright {
     margin-bottom: 10px;
   }
   .show-origin-top .origin-top-right {
-    font-size: 12px;
+    font-size: 14px;
+    display: flex;
+    flex-wrap: nowrap;
   }
   .show-origin-top .origin-top-right > .origin-id {
     display: inline-block;
