--- a/src/css/style.css
+++ b/src/css/style.css
@@ -785,6 +785,14 @@ body {
 .rank-list > .rank-item > .item-standing {
   width: 26%;
 }
+.rank-list > .rank-item > .item-standing.sort-select-box {
+  margin-left: 0;
+}
+.rank-list > .rank-item > .item-standing.sort-select-box .sort-select {
+  width: 100%;
+  padding-left: 14px;
+  box-sizing: border-box;
+}
 .rank-list > .rank-item > .item-keyword {
   width: 40%;
   white-space: nowrap;
@@ -1011,6 +1019,7 @@ body {
   border: 1px solid #fefefe;
   background-color: #fff;
   box-shadow: 1px 3px 12px rgba(128, 128, 128, 0.2);
+  cursor: pointer;
 }
 .article-content .slide-btn-wrap > .slide-btn.slide-left {
   left: 0;
@@ -1124,6 +1133,7 @@ body {
 .article-hottest-wrap > .list-more-btn {
   width: 100%;
   height: 38px;
+  line-height: 36px;
   margin-top: 8px;
   border-radius: 10px;
   border: none;
@@ -1131,6 +1141,8 @@ body {
   border: 1px solid #24cd88;
   color: #24cd88;
   transition: 0.3s;
+  text-align: center;
+  cursor: pointer;
 }
 .article-hottest-wrap > .list-more-btn:hover {
   background-color: #24cd88;
