--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -458,6 +458,10 @@ input[type="date"]:hover {
   border-radius: 8px;
   border: none;
   text-align: center;
+  cursor: pointer;
+}
+.detail-btn-area .cancel-btn:hover {
+  background-color: #e3e3e3;
 }
 .detail-btn-area .submit-btn {
   width: 196px;
@@ -470,6 +474,10 @@ input[type="date"]:hover {
   border-radius: 8px;
   color: #fff;
   text-align: center;
+  cursor: pointer;
+}
+.detail-btn-area .submit-btn:hover {
+  background-color: #27df95;
 }
 
 /** FOOTER **/
