--- a/src/css/style.css
+++ b/src/css/style.css
@@ -205,8 +205,8 @@ button:hover {
 
 /* text style */
 .txt-gr {
-  /* color: #24cd88; */
-  color: #42d31a;
+  color: #24cd88;
+  /* color: #42d31a; */
 }
 .txt-grey {
   color: #a0a0a0;
