--- a/src/css/style.css
+++ b/src/css/style.css
@@ -537,8 +537,29 @@ body {
   font-size: 14px;
 }
 .article-engagement .chart-area {
+  position: relative;
   width: 40%;
-  height: 234px;
+  height: 270px;
+}
+.article-engagement .chart-area .chart-pie {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 254px;
+  height: 254px;
+  border-radius: 50%;
+  background-color: #63eab1;
+}
+.article-engagement .chart-pie .value-engagement {
+  position: absolute;
+  width: 140px;
+  height: 140px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background-color: #fff;
 }
 .article-engagement .chart-info-area {
   width: 60%;
