--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -450,7 +450,8 @@ input[type="date"]:hover {
   display: inline-block;
 }
 .detail-btn-area .cancel-btn {
-  display: inline-block;
+  display: none;
+  /* display: inline-block; */
   width: 100px;
   height: 40px;
   line-height: 40px;
@@ -492,7 +493,8 @@ footer {
   width: 100%;
   max-width: 1200px;
   min-width: 1000px;
-  padding: 10px 14px 26px;
+  /* padding: 10px 14px 26px; */
+  padding: 36px 14px 36px;
   margin: 0 auto;
 }
 
@@ -1131,10 +1133,6 @@ address > .copyright {
 @media all and (max-width: 1024px) {
 }
 
-/* @media all and (max-width: 768px) {
-} */
-
-/* @media all and (max-width: 480px) { */
 @media all and (max-width: 768px) {
   /** HEADER **/
   #header {
@@ -1393,6 +1391,9 @@ address > .copyright {
     flex-wrap: nowrap;
     justify-content: space-between;
   }
+  .detail-btn-area .cancel-btn {
+    display: inline-block;
+  }
   .detail-btn-area .submit-btn {
     display: inline-block;
     margin-right: 0;
@@ -1568,4 +1569,7 @@ address > .copyright {
   .origin-info-list > .origin-info-item::after {
     display: none;
   }
+}
+
+@media all and (max-width: 480px) {
 }
