--- a/src/css/style.css
+++ b/src/css/style.css
@@ -183,6 +183,10 @@ button:hover {
   display: inline-block;
   width: calc(33.33333% - 7px);
   font-size: 14px;
+  transition: 0.35s;
+}
+.article-list-wrap .thumb-item:hover {
+  transform: scale(1.08, 1.08);
 }
 .article-list-wrap .thumb-item .thumb-img {
   border-radius: 10px;
@@ -1544,13 +1548,26 @@ body {
     font-size: 14px;
   }
 
+  #main.intro-page .content-section .section-inner {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
   #main .content-section .content-article.intro-keyword-now {
     display: block;
     width: 300px;
-    margin: 0 auto;
-  }
-  #main .content-section .content-article.intro-keyword-now {
     padding-bottom: 24px;
+    margin: 0 auto;
+    order: 3;
+  }
+
+  #main .content-section .content-article.article-buzz-news {
+    order: 1;
+  }
+
+  #main .content-section .content-article.article-youtube-hot {
+    order: 2;
   }
 
   /** CONTENT PAGE 480px **/
