--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -84,7 +84,7 @@ video {
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline;
+  /* vertical-align: baseline; */
   /* transform: skew(-0.01deg); */
   /* transform: skew(-0.001deg); */
 }
