--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -106,6 +106,7 @@ header:hover {
 
 /* HEADER > search area */
 .header-inner .search-area {
+  width: 850px;
   margin-top: 10px;
 }
 .header-inner .search-area > div {
@@ -212,6 +213,7 @@ header:hover {
 
 .header-inner > .user-area {
   float: right;
+  width: 130px;
   margin-top: 10px;
 }
 .user-area > .link-area {
@@ -1130,8 +1132,8 @@ address > .copyright {
   display: none;
 }
 
-@media all and (max-width: 1024px) {
-}
+/* @media all and (max-width: 1024px) {
+} */
 
 @media all and (max-width: 768px) {
   /** HEADER **/
